package org.byferge.core.domain.model;

public enum ExceptionType {
    EXTRA,
    DELAYED,
    CANCELLED,
    OMITTED
}
