package dto;

public class StopDTO {
    private int id;
    private String name;

    public StopDTO() {}

    public StopDTO(int id, String name) {
        this.id = id;
        this.name = name;
    }

    // --- Gettere / Settere ---
    public int getId() { return id; }
    public void setId(int id) { this.id = id; }

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
}
